--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,6 @@ name = "async-tracer"
 version = "0.1.0"
 edition = "2024"
 
-[dependencies]
+[dev-dependencies]
+futures = "0.3.31"
+tokio = { version = "1.45.0", features = ["rt", "macros", "time"] }
