--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,12 @@ name = "async-tracer"
 version = "0.1.0"
 edition = "2024"
 
+[dependencies]
+perf-event2 = { version = "0.7", optional = true }
+
 [dev-dependencies]
 futures = "0.3.31"
 tokio = { version = "1.45.0", features = ["rt", "macros", "time"] }
+
+[features]
+cpu-metrics = ["perf-event2"]
