--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "future-profiler"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
 authors = ["Stuart Woodbury <stuart@inversed.tech>"]
 description = "Measures the time that a future spends being polled. Provides hooks to collect additional measurements during poll()."
@@ -10,11 +10,24 @@ license = "MIT OR Apache-2.0"
 keywords = ["profiling", "metrics", "futures", "async"]
 
 [dependencies]
+metrics-logger = "0.22.1"
+tracing = { version = "0.1.40" }
+tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std", "registry"] }
+
 perf-event2 = { version = "0.7", optional = true }
+once_cell = { version = "1.20.2", optional = true }
+tracing-profile-perfetto-sys = { version = "0.9.0", optional = true }
+parking_lot = { version = "0.12.3", optional = true }
 
 [dev-dependencies]
 futures = "0.3.31"
-tokio = { version = "1.45.0", features = ["rt", "macros", "time"] }
+tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "time"] }
+tracing-test = "0.2.5"
 
 [features]
+default = []
 perf = ["perf-event2"]
+perfetto = ["tracing-profile-perfetto-sys", "once_cell", "parking_lot"]
+metrics = []
+subscriber = ["perfetto"]
+debug_test = []
